--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -692,14 +692,14 @@
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
  	 	 	},
  	 	 	"openContainer": {
- 	 	 	 	"trans": "컨테이너 잠금을 해제하십시오",
+ 	 	 	 	"trans": "상자 잠금 해제",
  	 	 	 	"eng": "Unlock Container"
  	 	 	},
  	 	 	"cantOpenContainerNotIdle": {
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "컨테이너 잠금을 해제하는 동안 ${currentAction}",
+ 	 	 	 	"trans": "${currentAction}동안 상자의 잠금을 해제합니다.",
  	 	 	 	"eng": "You unlock containers while ${currentAction}"
  	 	 	}
  	 	},
@@ -790,7 +790,7 @@
  	 	 	},
  	 	 	"unlockContainerButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "컨테이너 잠금을 해제하십시오",
+ 	 	 	 	 	"trans": "상자 잠금 해제",
  	 	 	 	 	"eng": "Unlock Container"
  	 	 	 	}
  	 	 	},
@@ -2203,40 +2203,40 @@
  	 	"unlockContainerPage": {
  	 	 	"selectContainerModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "잠금을 해제 할 컨테이너를 선택하십시오",
+ 	 	 	 	 	"trans": "잠금을 해제할 상자를 선택하십시오.",
  	 	 	 	 	"eng": "Please select an container to unlock"
  	 	 	 	}
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "컨테이너 잠금을 해제하십시오",
+ 	 	 	 	"trans": "상자 잠금 해제",
  	 	 	 	"eng": "Unlock Container"
  	 	 	},
  	 	 	"selectContainer": {
  	 	 	 	"subTitle": {
- 	 	 	 	 	"trans": "잠금을 해제 할 컨테이너를 선택하십시오",
+ 	 	 	 	 	"trans": "잠금을 해제할 상자를 선택하십시오",
  	 	 	 	 	"eng": "Please select an container to unlock"
  	 	 	 	},
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "컨테이너",
+ 	 	 	 	 	"trans": "상자",
  	 	 	 	 	"eng": "Container"
  	 	 	 	},
- 	 	 	 	"trans": "컨테이너를 선택하십시오",
+ 	 	 	 	"trans": "상자를 선택하십시오",
  	 	 	 	"eng": "Select Container"
  	 	 	},
  	 	 	"hint": {
- 	 	 	 	"trans": "컨테이너 잠금 해제 항목을 내부에 넣고 소량의 기술 스크랩이 필요합니다",
+ 	 	 	 	"trans": "상자를 잠금 해제하여 안에 있는 아이템을 얻기 위해서는, 약간의 공학 조각이 필요합니다.",
  	 	 	 	"eng": "Unlock a container to get the items inside, requires small amount of tech scraps"
  	 	 	},
  	 	 	"increaseEpicDropRate": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "서사시 계층 낙하율을 높입니다",
+ 	 	 	 	 	"trans": "에픽 등급 아이템의 등장 확률을 높입니다.",
  	 	 	 	 	"eng": "Increase Epic Tier Drop Rate"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName}을 활성화하여 잠긴 전설 컨테이너를 잠금 해제 할 때 최대 2% (전설 컨테이너 당 0.5%) 추가 기회를받을 수 있습니다",
+ 	 	 	 	 	"trans": "${itemName}을 활성화하여 잠긴 전설 상자를 잠금 해제할 때 최대 2% (전설 컨테이너 당 0.5%)만큼 등장 확률이 높아집니다.",
  	 	 	 	 	"eng": "Receive up to 2% (0.5% per Legendary Container) additional chance to get epic tier cache when unlocking Locked Legendary Container by activating ${itemName}"
  	 	 	 	}
  	 	 	},
@@ -2252,12 +2252,12 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName}은 이제 활성화되어 있으며, 전설 컨테이너 당 0.5% 추가 기회를 갖도록 전설 컨테이너를 잠금 해제합니다",
+ 	 	 	 	 	"trans": "${itemName}은 이제 활성화되어 있으며, 0.5%의 추가 에픽 장비 등장 확률을 가진 전설 상자를 잠금 해제합니다",
  	 	 	 	 	"eng": "${itemName} is now active, unlock Legendary Container now to have 0.5% additional chance for EPIC tier equipment per Legendary Container"
  	 	 	 	}
  	 	 	},
  	 	 	"unlock": {
- 	 	 	 	"trans": "터놓다",
+ 	 	 	 	"trans": "잠금 해제",
  	 	 	 	"eng": "Unlock"
  	 	 	}
  	 	}
@@ -3248,7 +3248,7 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation10": {
- 	 	 	"trans": "명성",
+ 	 	 	"trans": "프레스티지",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
@@ -3596,11 +3596,11 @@
  	 	"donation10": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"프레스티지\"기부 제목",
+ 	 	 	 	 	"trans": "\"프레스티지\"후원 타이틀",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 사용자 정의 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3612,7 +3612,7 @@
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "사용자 정의 바이오 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3620,15 +3620,15 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱 모토를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱 이미지를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "향후 업데이트에 더 많이 올 것입니다",
+ 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4388,11 +4388,11 @@
  	 	},
  	 	"christmasGift": {
  	 	 	"name": {
- 	 	 	 	"trans": "신비한 상자",
+ 	 	 	 	"trans": "[이벤트] 신비한 상자",
  	 	 	 	"eng": "Mysterious Container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "빨간색, 녹색 장식이 있는 상자, 측면에는 '사이버산타 ™' 로고가 있습니다.",
+ 	 	 	 	"trans": "빨간색, 녹색 장식이 있는 상자. 측면에는 '사이버산타 ™' 로고가 있습니다.",
  	 	 	 	"eng": "An encrypted container with red, green decoration and a 'CyberSanta™' logo on the side of it."
  	 	 	}
  	 	},
@@ -4427,11 +4427,11 @@
  	 	},
  	 	"halloweenItem": {
  	 	 	"name": {
- 	 	 	 	"trans": "잭 오 랜턴",
+ 	 	 	 	"trans": "[이벤트] 잭 오 랜턴",
  	 	 	 	"eng": "Jack-o'-lantern"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "내부의 LED에 의해 조명되는 조각 된 호박. 할로윈의 장식용 아이템 사용입니다.",
+ 	 	 	 	"trans": "내부에 LED가 환하게 빛나고 있는, 조각된 호박. 할로윈에 쓰이는 장식품입니다.",
  	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
@@ -5399,7 +5399,7 @@
  	 	},
  	 	"halloween": {
  	 	 	"name": {
- 	 	 	 	"trans": "잭 오 랜턴",
+ 	 	 	 	"trans": "[이벤트] 잭 오 랜턴",
  	 	 	 	"eng": "Jack O Lantern"
  	 	 	}
  	 	},
@@ -6286,51 +6286,51 @@
  	 	 	"eng": "Happy Halloween!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "다시 올해의 으스스한 시간입니다! Shang-Ri-La는 특별한 이벤트와 함께 할로윈을 축하합니다!",
+ 	 	 	"trans": "올해 가장 으스스한 날이 돌아왔습니다! 샹그릴라가 준비하는 특별한 축제와 함께 할로윈을 기념해보세요!",
  	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
  	 	},
  	 	"desc2": {
- 	 	 	"trans": "적과 AI Core Auto Farm은 Jack-O-Lanterns를 떨어 뜨릴 수 있습니다! 이것을 사용하여 잠긴 전설 컨테이너를 제작할 수 있습니다!",
+ 	 	 	"trans": "적 사냥과 AI코어 자동 사냥으로 잭 오 랜턴을 얻을 수 있습니다! 잭 오 랜턴 100개로 잠긴 전설 상자를 제작할 수 있습니다.",
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "할로윈 기간 동안 제한된 사이버 바트 채팅 기부 계층이 제공됩니다!",
+ 	 	 	"trans": "거기에 더해, 할로윈 기간 한정 사이버-박쥐 프레스티지 후원을 구매하실 수 있습니다!",
  	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
  	 	}
  	},
  	"referralPromo": {
  	 	"title": {
- 	 	 	"trans": "놀라운 보상을 받으려면 친구를 소개하십시오!",
+ 	 	 	"trans": "친구에게 이 게임을 소개하고 추천인이 되어 멋진 보상을 받아보세요!",
  	 	 	"eng": "Refer your friends to get amazing rewards!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "무료 단위*",
+ 	 	 	"trans": "공짜 유닛*",
  	 	 	"eng": "Free Unit*"
  	 	},
  	 	"desc2": {
- 	 	 	"trans": "희귀 잠긴 컨테이너",
+ 	 	 	"trans": "잠긴 희귀 상자",
  	 	 	"eng": "Rare Locked Container"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "패니 팩",
+ 	 	 	"trans": "보조 가방",
  	 	 	"eng": "Fanny Pack"
  	 	},
  	 	"instruction": {
  	 	 	"title": {
- 	 	 	 	"trans": "참조 방법?",
+ 	 	 	 	"trans": "추천인이 되려면 어떻게 해야 하나요?",
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
- 	 	 	 	"trans": "1. 캐릭터 생성 중에 친구가 게임 내 이름을 입력하도록하십시오",
+ 	 	 	 	"trans": "친구가 캐릭터를 생성할 때 추천인에 자신의 닉네임을 적도록 하세요! (중요하니 두 번 강조함)",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
  	 	"footnote1": {
- 	 	 	"trans": "*친구가 구매 할 때마다 10% 보너스 장치를받습니다",
+ 	 	 	"trans": "*친구가 후원을 하여 유닛(UNIT)을 구매할 때, 추천인은 그 양의 10%를 같이 받게 됩니다!",
  	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
  	 	},
  	 	"footnote2": {
- 	 	 	"trans": "*친구가 레벨 20에 도달하면 항목받은 편지함의 시간을 받게됩니다",
+ 	 	 	"trans": "*친구가 레벨 20에 도달하면 위에 적혀 있는 아이템을 우편함으로 받을 수 있습니다.",
  	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
  	 	}
  	},
@@ -6369,7 +6369,7 @@
  	},
  	"selectItemModal": {
  	 	"noItems": {
- 	 	 	"trans": "사용 가능한 항목이 없습니다",
+ 	 	 	"trans": "사용 가능한 아이템이 없습니다",
  	 	 	"eng": "No available items"
  	 	}
  	},
