Change 'Деловой Район' -> 'Центр Занятости'

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -1432,7 +1432,7 @@
  	 	},
  	 	"job": {
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "Ты должнен быть как минимум 2-го уровня, чтобы получить доступ к центру занятости",
+ 	 	 	 	"trans": "Ты должнен быть как минимум 2-го уровня, чтобы получить доступ к Центру Занятости",
  	 	 	 	"eng": "You need to be at least level 2 to access the job hub"
  	 	 	}
  	 	},
@@ -3767,7 +3767,7 @@
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Тех. металлолом, оставшийся от демонтированного оборудования, разбери его для улучшения навыка печати. \r\n        Разобрать металлолом можно в Деловом Районе.",
+ 	 	 	 	"trans": "Тех. металлолом, оставшийся от демонтированного оборудования, разбери его для улучшения навыка печати. \r\n        Разобрать металлолом можно в Центре Занятости.",
  	 	 	 	"eng": "Technology scrap from disassembled equipment, this can be reverse engineered to gain printing xp. \r\n        You can perform reverse engineering in the Job Hub."
  	 	 	}
  	 	},
@@ -4065,7 +4065,7 @@
  	 	 	 	"eng": "Hash Processor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Может быть использован как аппаратное обеспечение для криптодобычи, \r\n        но из-за слишком сильного разгона процессор легко перегорает;\r\n        Ты можешь использовать его для криптодобычи в [ДЕЛОВОМ РАЙОНЕ]",
+ 	 	 	 	"trans": "Может быть использован как аппаратное обеспечение для криптодобычи, \r\n        но из-за слишком сильного разгона процессор легко перегорает;\r\n        Ты можешь использовать его для криптодобычи в [ЦЕНТРЕ ЗАНЯТОСТИ]",
  	 	 	 	"eng": "Can be used as a dedicated hardware for BitCoin mining, \r\n        however due to overclocking, the processor is easily burntout,\r\n        You may use this to mine BitCoin at [JOB HUB]"
  	 	 	}
  	 	},
