--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -3284,7 +3284,7 @@
  	 	 	 	 	"eng": "\"Donator\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci Kustomisasi Gambar Profil",
+ 	 	 	 	 	"trans": "Membuka kunci Kustomisasi Gambar Profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3304,7 +3304,7 @@
  	 	 	 	 	"eng": "\"Elite\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci Kustomisasi Gambar Profil",
+ 	 	 	 	 	"trans": "Membuka kunci Kustomisasi Gambar Profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3316,7 +3316,7 @@
  	 	 	 	 	"eng": "Gold Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Buka Kustom Bio",
+ 	 	 	 	 	"trans": "Membuka Kustom Bio",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3344,7 +3344,7 @@
  	 	 	 	 	"eng": "\"Legendary\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci Kustomisasi Gambar Profil",
+ 	 	 	 	 	"trans": "Membuka kunci Kustomisasi Gambar Profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3356,7 +3356,7 @@
  	 	 	 	 	"eng": "Purple Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Buka Kustom Bio",
+ 	 	 	 	 	"trans": "Membuka Kustom Bio",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3388,7 +3388,7 @@
  	 	 	 	 	"eng": "\"Cybernetic Potato\" donation title"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Buka kunci Kustomisasi Gambar Profil",
+ 	 	 	 	 	"trans": "Membuka kunci Kustomisasi Gambar Profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"4": {
@@ -3404,7 +3404,7 @@
  	 	 	 	 	"eng": "Potato Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Buka Kustom Bio",
+ 	 	 	 	 	"trans": "Membuka Kustom Bio",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"8": {
@@ -3440,7 +3440,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci Kustomisasi Gambar Profil",
+ 	 	 	 	 	"trans": "Membuka kunci Kustomisasi Gambar Profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3452,7 +3452,7 @@
  	 	 	 	 	"eng": "Blue Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Buka Kustom Bio",
+ 	 	 	 	 	"trans": "Membuka Kustom Bio",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3480,7 +3480,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci kustomisasi gambar profil",
+ 	 	 	 	 	"trans": "Membuka kunci kustomisasi gambar profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3492,7 +3492,7 @@
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Buka Kunci Bio Kustom",
+ 	 	 	 	 	"trans": "Membuka Kunci Bio Kustom",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3520,7 +3520,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci kustomisasi gambar profil",
+ 	 	 	 	 	"trans": "Membuka kunci kustomisasi gambar profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3532,7 +3532,7 @@
  	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Buka Kunci Bio Kustom",
+ 	 	 	 	 	"trans": "Membuka Kunci Bio Kustom",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3560,7 +3560,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci kustomisasi gambar profil",
+ 	 	 	 	 	"trans": "Membuka kunci kustomisasi gambar profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3572,7 +3572,7 @@
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Buka Kunci Bio Kustom",
+ 	 	 	 	 	"trans": "Membuka Kunci Bio Kustom",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3600,7 +3600,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Buka kunci kustomisasi gambar profil",
+ 	 	 	 	 	"trans": "Membuka kunci kustomisasi gambar profil",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3612,7 +3612,7 @@
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Buka Kunci Bio Kustom",
+ 	 	 	 	 	"trans": "Membuka Kunci Bio Kustom",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3641,7 +3641,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Penawaran meningkatkan kerusakan pada geng hewan. menerima peningkatan kerusakan dari geng pemulung.",
+ 	 	 	 	"trans": "Meningkatkan kerusakan kepada geng hewan. menerima peningkatan kerusakan dari geng pemulung.",
  	 	 	 	"eng": "deals increased damage to Animals gang. receives increased damage from Scavengers gang."
  	 	 	}
  	 	},
@@ -3651,7 +3651,7 @@
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Menawarkan kerusakan pada geng voodoo boys. menerima peningkatan kerusakan dari geng hewan.",
+ 	 	 	 	"trans": "Meningkatkan kerusakan kepada geng voodoo boys. menerima peningkatan kerusakan dari geng hewan.",
  	 	 	 	"eng": "deals increased damage to Voodoo Boys gang. receives increased damage from Animals gang."
  	 	 	}
  	 	},
@@ -3661,7 +3661,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Penawaran meningkatkan kerusakan pada geng pemulung. Menerima peningkatan kerusakan dari geng voodoo boys.",
+ 	 	 	 	"trans": "Meningkatkan kerusakan kepada geng pemulung. Menerima peningkatan kerusakan dari geng voodoo boys.",
  	 	 	 	"eng": "deals increased damage to Scavengers gang. receives increased damage from Voodoo Boys gang."
  	 	 	}
  	 	}
@@ -3713,7 +3713,7 @@
  	 	},
  	 	"aiCoreCluster": {
  	 	 	"name": {
- 	 	 	 	"trans": "Ai core cluster",
+ 	 	 	 	"trans": "AI core cluster",
  	 	 	 	"eng": "AI Core Cluster"
  	 	 	},
  	 	 	"description": {
@@ -3841,7 +3841,7 @@
  	 	},
  	 	"healing3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Bot Medis Nano Kualitas Kendah",
+ 	 	 	 	"trans": "Bot Medis Nano Kualitas Rendah",
  	 	 	 	"eng": "Degraded Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3855,7 +3855,7 @@
  	 	 	 	"eng": "Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "suntikkan untuk menyembuhkan segala luka(*Syarat Berlaku)",
+ 	 	 	 	"trans": "suntikkan untuk menyembuhkan segala luka(*Syarat Berlaku)!",
  	 	 	 	"eng": "Inject it to cure any(*conditions apply) injury!"
  	 	 	}
  	 	},
@@ -3865,7 +3865,7 @@
  	 	 	 	"eng": "Military Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Nano mesin yang dapat disuntikkan dan biasa digunakan untuk keperluan militer, dapat menutup luka ketika bertarung.",
+ 	 	 	 	"trans": "Mesin nano yang dapat disuntikkan dan biasa digunakan untuk keperluan militer, dapat menyembuhkan luka ketika bertarung.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They are capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3875,7 +3875,7 @@
  	 	 	 	"eng": "Advanced Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Mesin nano yang dapat disuntik dan biasanya dipakai oleh militer, dapat untuk menutup luka ketika bertarung.",
+ 	 	 	 	"trans": "Mesin nano yang dapat disuntik dan biasanya dipakai oleh militer, dapat untuk menyembuhkan luka ketika bertarung.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3885,7 +3885,7 @@
  	 	 	 	"eng": "High Quality Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Mesin nano yang dapat disuntik dan biasanya dipakai untuk keperluan militer canggih, dapat digunakan untuk menutup luka ketika bertarung.",
+ 	 	 	 	"trans": "Mesin nano yang dapat disuntik dan biasanya dipakai untuk keperluan militer canggih, dapat digunakan untuk menyembuhkan luka ketika bertarung.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3895,7 +3895,7 @@
  	 	 	 	"eng": "Rare Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Mesin nano yang dapat disuntik dan biasanya dipakai untuk keperluan militer canggih,dapat digunakan untuk menutup luka ketika bertarung.",
+ 	 	 	 	"trans": "Mesin nano yang dapat disuntik dan biasanya dipakai untuk keperluan militer canggih,dapat digunakan untuk menyembuhkan luka ketika bertarung.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3905,7 +3905,7 @@
  	 	 	 	"eng": "Legendary Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Mesin nano yang dapat disuntikkan untuk digunakan untuk keperluan militer canggih, serta mampu menutup luka dalam situasi tempur",
+ 	 	 	 	"trans": "Mesin nano yang dapat disuntikkan untuk digunakan untuk keperluan militer canggih, serta mampu menyembuhkan luka dalam situasi tempur",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3915,7 +3915,7 @@
  	 	 	 	"eng": "Epic Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Mesin nano yang dapat disuntikkan dan digunakan untuk keperluan militer maju, mampu menutup luka dalam situasi tempur",
+ 	 	 	 	"trans": "Mesin nano yang dapat disuntikkan dan digunakan untuk keperluan militer maju, mampu menyembuhkan luka dalam situasi tempur",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3925,7 +3925,7 @@
  	 	 	 	"eng": "Prestige Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "mesin nano suntik yang untuk penggunaan militer di muka, mampu menambal cedera dalam situasi tempur",
+ 	 	 	 	"trans": "mesin nano suntik yang untuk penggunaan militer di muka, mampu menyembuhkan cedera dalam situasi tempur",
  	 	 	 	"eng": "injectable nano machines that is for advance military use, capable of patching injury in combat situation"
  	 	 	}
  	 	},
@@ -3941,7 +3941,7 @@
  	 	},
  	 	"healingArea2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Drone Perbaikan Terdegradasi",
+ 	 	 	 	"trans": "Drone Perbaikan Kualitas Rendah",
  	 	 	 	"eng": "Degraded Repair drone"
  	 	 	},
  	 	 	"description": {
@@ -3951,7 +3951,7 @@
  	 	},
  	 	"healingArea3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Drone Nano Medis Terdegradasi",
+ 	 	 	 	"trans": "Drone Nano Medis Kualitas Rendah",
  	 	 	 	"eng": "Degraded nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -4118,7 +4118,7 @@
  	 	 	 	"eng": "locked container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "sebuah kotak kuat yang dikunci dengan enkripsi biometrik, kelihatannya mengandung barang yang penting di dalamnya.\r\n        untungnya komputer kecil di dalamnya memakai firmware yang tidak terupdate, ketika sebuah exploit ada, pergi ke [Terminal] untuk membuka kontainer ini",
+ 	 	 	 	"trans": "sebuah kotak kuat yang dikunci dengan enkripsi biometrik, kelihatannya mengandung barang yang penting di dalamnya.\r\n        untungnya komputer kecil di dalamnya memakai firmware yang sudah usang, ketika memungkinkan exploit, pergi ke [Terminal] untuk membuka kontainer ini",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -4128,7 +4128,7 @@
  	 	 	 	"eng": "locked rare container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "sebuah kotak kuat yang dikunci dengan enkripsi biometrik, kelihatannya mengandung barang yang penting di dalamnya.\r\n        untungnya komputer kecil di dalamnya memakai firmware yang tidak terupdate, ketika sebuah exploit ada, pergi ke [Terminal] untuk membuka kontainer ini",
+ 	 	 	 	"trans": "sebuah kotak kuat yang dikunci dengan enkripsi biometrik, kelihatannya mengandung barang yang penting di dalamnya.\r\n        untungnya komputer kecil di dalamnya memakai firmware yang sudah usang, ketika memungkinkan exploit, pergi ke [Terminal] untuk membuka kontainer ini",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -4138,7 +4138,7 @@
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "sebuah kotak kuat yang dikunci dengan enkripsi biometrik, kelihatannya mengandung barang yang penting di dalamnya.\r\n        untungnya komputer kecil di dalamnya memakai firmware yang tidak terupdate, ketika sebuah exploit ada, pergi ke [Terminal] untuk membuka kontainer ini",
+ 	 	 	 	"trans": "sebuah kotak kuat yang dikunci dengan enkripsi biometrik, kelihatannya mengandung barang yang penting di dalamnya.\r\n        untungnya komputer kecil di dalamnya memakai firmware yang sudah usang, ketika memungkinkan exploit, pergi ke [Terminal] untuk membuka kontainer ini",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -4242,7 +4242,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Kalibrasi AI SHARD (${percent}%)",
+ 	 	 	 	"trans": "Kalibrasi Pecahan AI (${percent}%)",
  	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	},
@@ -4252,7 +4252,7 @@
  	 	 	 	"eng": "Calibration Safety Nano Bots"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Mesin nano eksperimental yang dirancang untuk mengurangi dan meniadakan efek destruktif saat gagal kalibrasi, \r\n        ketika ini diaktifkan, semua kalibrasi gagal tidak akan menghancurkan item selama 5 menit",
+ 	 	 	 	"trans": "Mesin nano eksperimental yang dirancang untuk mengurangi dan meniadakan efek destruktif saat gagal kalibrasi, \r\n        ketika ini diaktifkan, semua kalibrasi gagal tidak akan menghancurkan item selama 5 menit (Berguna untuk semua pemain)",
  	 	 	 	"eng": "Experimental nano machines designed to reduces and negate the destructive effect when failing calibration, \r\n        when this is activated, all calibration fails will not destroy the item for 5 minutes (Applies to all players)"
  	 	 	}
  	 	},
@@ -4312,7 +4312,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [PIRATE]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Modul eksploitasi yang mencegat paket obrolan global dan memodifikasinya, melakukan serangan man-in-the-middle. \r\n         Mengubah percakapan semua orang menjadi percakapan Bajak Laut. Efek ini dapat dirasakan semua pemain selama 10 menit",
+ 	 	 	 	"trans": "Modul eksploitasi yang menangkap paket obrolan global dan memodifikasinya, melakukan serangan man-in-the-middle. \r\n         Mengubah percakapan semua orang menjadi percakapan Bajak Laut. Efek ini dapat dirasakan semua pemain selama 10 menit",
  	 	 	 	"eng": "A exploit module that intercepts global chat packages and modifies it, performing Man-In-The-Middle attack.\r\n        Transforms all speech at global chat to Pirate Speak. This effects all players for 10 minutes"
  	 	 	}
  	 	},
@@ -4322,7 +4322,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [1337]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Modul eksploitasi yang mencegat paket obrolan global dan memodifikasinya, melakukan serangan man-in-the-middle. \r\n         Mengubah percakapan semua orang menjadi percakapan L33T SP34K. efek ini dapat dirasakan semua pemain selama 10 menit",
+ 	 	 	 	"trans": "Modul eksploitasi yang menangkap paket obrolan global dan memodifikasinya, melakukan serangan man-in-the-middle. \r\n         Mengubah percakapan semua orang menjadi percakapan L33T SP34K. efek ini dapat dirasakan semua pemain selama 10 menit",
  	 	 	 	"eng": "A exploit module that intercepts global chat packages and modifies it, performing Man-In-The-Middle attack.\r\n        Transforms all speech at global chat to l33t Sp34k. This effects all players for 10 minutes"
  	 	 	}
  	 	},
@@ -4408,7 +4408,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "SHARD yang berisi eksploitasi muka yang dirancang untuk meningkatkan peluang penurunan acak dari item tingkat tinggi. Memuat peluang drop tambahan dari item legendaris ($}%) dan epik ($} ($}%) saat membuka kunci wadah legendaris (tidak dapat ditumpuk) untuk ${time} menit. * PENTING: Buff hanya akan berlaku ketika proses pembuka kunci dimulai saat buff aktif *.",
+ 	 	 	 	"trans": "SHARD yang berisi eksploitasi muka yang dirancang untuk meningkatkan peluang penurunan acak dari item tingkat tinggi. Mendapat peluang drop tambahan dari item legendaris ($}%) dan epik ($} ($}%) saat membuka kunci wadah legendaris (tidak dapat ditumpuk) untuk ${time} menit. * PENTING: Buff hanya akan berlaku ketika proses pembuka kunci dimulai saat buff aktif *.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -4756,7 +4756,7 @@
  	 	 	 	"eng": "Cosmetic Cyberwear"
  	 	 	},
  	 	 	"canAccessError": {
- 	 	 	 	"trans": "Kamu perlu setidaknya tingkat 5 untuk mengakses pedagang kosmetik",
+ 	 	 	 	"trans": "Kamu perlu setidaknya tingkat 3 untuk mengakses pedagang kosmetik",
  	 	 	 	"eng": "You need to be at least level 3 to access cosmetic merchant"
  	 	 	},
  	 	 	"tut": {
@@ -4897,7 +4897,7 @@
  	 	"blackMarket": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hey kid, wanna make some quick bucks?"
+ 	 	 	 	 	"Hey kid, ingin membut uang dengan cepat?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, wanna make some quick bucks?"
